test-cases/negative/test_131_return_in_wrong_context.lay
# negative test: return statement in wrong context (not in function)
# expected: parser or type checker should catch this

if true then
  return 5
end if


